--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
+    "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
