--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@/styles/*": ["./src/app/styles/*"],
+      "@/styles/*": ["./src/styles/*"],
       "@/redux/*": ["./src/store/*"]
     }
   },
