--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blockfrost/blockfrost-js": "^5.5.0",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "decimal.js": "^10.4.3",
     "lucid-cardano": "^0.10.7",
     "next": "14.1.0",
     "react": "^18",
