--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0"
