--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@blockfrost/blockfrost-js": "^5.5.0",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tanstack/react-query": "^5.28.4",
     "axios": "^1.6.7",
     "decimal.js": "^10.4.3",
     "lucid-cardano": "^0.10.7",
@@ -18,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
     "react-quill": "^2.0.0",
     "react-quill-emoji": "^0.1.9",
     "react-redux": "^9.1.0",
