--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-quill": "^2.0.0",
     "react-quill-emoji": "^0.1.9",
     "react-redux": "^9.1.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0"
   },
